Fixing Travis for new setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - 3.4
 branches:
   only:
-    - release/release-11-UI
+    - master
 
 notifications:
   email:
@@ -33,7 +33,7 @@ deploy:
     acl: public_read
     detect_encoding: true
     on:
-      branch: release/release-11-UI
+      branch: master
 
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
@@ -45,4 +45,4 @@ deploy:
     deployment_group: TeamBash-App
     region: us-west-2
     on:
-      branch: release/release-11-UI
+      branch: master
